fixed hero section in 70% visible

--- a/src/components/modules/home/HeroSection/HeroSection.module.css
+++ b/src/components/modules/home/HeroSection/HeroSection.module.css
@@ -1,6 +1,6 @@
 .banner {
   background: url("../../../../app/assets/home-cover.jpg");
-  height: 100vh;
+  height: 70vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
